@@ -27,8 +27,8 @@
 
 #include <xapian/database.h>
 
+#include "brass_defs.h"
 #include "brass_inverter.h"
-#include "brass_types.h"
 #include "brass_positionlist.h"
 #include "api/leafpostlist.h"
 #include "omassert.h"
